output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_564.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_564.py", line 106
    s.add(
         ^
SyntaxError: '(' was never closed
